--- a/pom.xml
+++ b/pom.xml
@@ -47,6 +47,11 @@
 		</dependency>
 
 		<!--Frontend-->
+		<dependency>
+			<groupId>jstl</groupId>
+			<artifactId>jstl</artifactId>
+			<version>1.2</version>
+		</dependency>
 <!--		<dependency>-->
 <!--			<groupId>org.webjars</groupId>-->
 <!--			<artifactId>bootstrap</artifactId>-->
