--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
 	</parent>
 	<groupId>com.rickbala</groupId>
 	<artifactId>SwayWebApp</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>0.9.0</version>
 	<name>SwayWebApp</name>
 	<description>Fork this and help make communication free.</description>
 
